# Project-Master

./: .gitignore  BRANDING.md  BUILD_HANDOFF.md  CHANGELOG.md  DESIGN_BRIEF.md  LICENSE  MILESTONE_1.md  README.md  RELEASE_NOTES_ALPHA_v0.1.0.md  RELEASE_NOTES_ALPHA_v0.1.1.md  index.html  mike notes  mike notes.md  package-lock.json  package.json
.github/: FUNDING.yml
ProjectMaster-v0.1.0/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NEXT_PROMPT.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  pyproject.toml
ProjectMaster-v0.1.0/.github/: pull_request_template.md
ProjectMaster-v0.1.0/config/: default.yaml
ProjectMaster-v0.1.0/constitution/: CONSTITUTION.md
ProjectMaster-v0.1.0/docs/: AGENT.md  ARCHITECTURE.md  EPISTEMIC_AI.md  LOCAL_API.md  MEMORY.md  PERSONALITY.md  PHILOSOPHY.md  PLANNER.md  PLUGIN_SYSTEM.md  PORTABLE_CONTEXT.md  RESEARCH_ENGINE.md  SELF_EVALUATION.md  TAURI_UI.md  TOOLS.md  VOICE.md
ProjectMaster-v0.1.0/examples/: first_session.md
ProjectMaster-v0.1.0/prompts/: EPISTEMIC_PROMPT.md  PERSONALITY_PROMPT.md  SYSTEM_PROMPT.md
ProjectMaster-v0.1.0/schemas/: evidence_ledger.schema.json  memory.schema.json  response.schema.json  task.schema.json
ProjectMaster-v0.1.0/scripts/: bootstrap.ps1  run.ps1
ProjectMaster-v0.1.0/tasks/: 001-constitution.md  002-epistemic-engine.md  003-memory.md  004-tool-layer.md  005-research-engine.md  006-planner-task-manager.md  007-adaptive-personality.md  008-voice.md  009-agent-autonomy.md  010-self-evaluation.md  011-plugin-system.md  012-tauri-desktop-ui.md
(+66 files in other folders)
