[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-master-ai"
version = "0.2.1"
description = "Local-first epistemic AI framework with Ollama, tools, memory, and evidence tracking"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Mike Hyman"}]
dependencies = [
  "httpx>=0.27,<1",
  "fastapi>=0.115,<1",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
  "uvicorn>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.5,<1"
]
packaging = [
  "pyinstaller>=6.14,<7"
]

[project.scripts]
master = "project_master.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
project_master = ["resources/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
